--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,15 @@
 theme: jekyll-theme-dinky
-title: Distributed Text Services Specification [Candidate Recommendation Status]
+title: Distributed Text Services Specifications
 description: The Distributed Text Services (DTS) Specification defines a Hypermedia-Driven Web API for working with collections of text as machine-actionable data.
 show_downloads: false
+menu:
+  - title: "Home"
+    url: "/"
+  - title : "Entry Point"
+    url: "Collection-Endpoint.html"
+  - title : "Collection Endpoint"
+    url: "Document-Endpoint.html"
+  - title : "Navigation Endpoint"
+    url: "Navigation-Endpoint.html"
+  - title : "Document Endpoint"
+    url: "distributed-text-services-api.html"
