--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,13 @@
 main:
   - title: "FAQ"
     url: "FAQ.html"
-  - title : "Basics"
+  - title: "Endpoint Basics"
     url: "Entry.html"
-  - title : "Collection"
+  - title: "Collection"
     url: "Collections-Endpoint.html"
-  - title : "Navigation"
+  - title: "Navigation"
     url: "Navigation-Endpoint.html"
-  - title : "Document"
+  - title: "Document"
     url: "Documents-Endpoint.html"
   - title : "Organization"
     url: "Organization.html"
