Corrected all references to Documents and Collections endpoints to use singular names; normalized  property name to camel case  throughout; fixed broken link at Collection-Endpoint#scheme under citeStructure

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,11 @@ main:
   - title: "Endpoint Basics"
     url: "Entry.html"
   - title: "Collection"
-    url: "Collections-Endpoint.html"
+    url: "Collection-Endpoint.html"
   - title: "Navigation"
     url: "Navigation-Endpoint.html"
   - title: "Document"
-    url: "Documents-Endpoint.html"
+    url: "Document-Endpoint.html"
   - title : "Organization"
     url: "Organization.html"
   - title : "Cookbook"
