One page to rule them all (Ian said it)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,18 +1,12 @@
 # main links
 main:
-  - title: "FAQ"
-    url: "FAQ.html"
-  - title: "Endpoint Basics"
-    url: "Entry.html"
-  - title: "Collection"
-    url: "Collection-Endpoint.html"
-  - title: "Navigation"
-    url: "Navigation-Endpoint.html"
-  - title: "Document"
-    url: "Document-Endpoint.html"
+  - title: "API Documentation"
+    url: "specs-v1.html"
   - title : "Organization"
     url: "Organization.html"
   - title : "Cookbook"
     url: "Cookbook.html"
+  - title: "FAQ"
+    url: "FAQ.html"
   - title : "Workshops"
     url: "https://distributed-text-services.github.io/workshops"
